# Copyright (C) 2004 Ricardo Scachetti Pereira <rpereira at ku.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

if BUILD_JAVA
JAVA_DIR=java
endif

if BUILD_PYTHON
PYTHON_DIR=python
endif

SUBDIRS = $(JAVA_DIR) $(PYTHON_DIR)
